(executable
 (name json_schema_hooks_cli)
 (libraries
  cmdliner
  compiler-libs.common
  containers
  json_schema_conv
  ocaml-compiler-libs.common
  ocaml-compiler-libs.shadow
  ppx_deriving
  sln
  tsort
  yojson)
 (ocamlopt_flags
  (:standard -w -32))
 (ocamlc_flags
  (:standard -w -32))
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving_yojson)))
