(executable
 (name json_schema_hooks_cli)
 (libraries
  cmdliner
  compiler-libs.common
  containers
  json_schema_conv
  json_schema_flatten
  ocaml-compiler-libs.common
  ocaml-compiler-libs.shadow
  tsort
  yojson
  ppx_deriving)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving_yojson)))
