[package]
name = "minijinja-c-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "C wrapper for MiniJinja template engine"
license = "MIT OR Apache-2.0"

[lib]
name = "minijinja_c_wrapper"
crate-type = ["staticlib"]

[dependencies]
minijinja = { version = "2.3", features = ["builtins"] }
serde_json = "1.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
