(library
 (name openapi_conv)
 (libraries
  compiler-libs.common
  containers
  json_schema_conv
  json_schema_flatten
  ocaml-compiler-libs.common
  ocaml-compiler-libs.shadow
  sln
  tsort
  yojson
  ppx_deriving)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving_yojson)))
