(library
 (name otls)
 (libraries ctypes ctypes.foreign otls_bindings)
 (flags
  (:standard -w -32-37-60))
 (library_flags -linkall)
 (ctypes
  (external_library_name libtls)
  (build_flags_resolver pkg_config)
  (headers
   (preamble "#include <tls.h>"))
  (type_description
   (instance Types)
   (functor Otls_bindings_types))
  (function_description
   (instance Functions)
   (functor Otls_bindings_functions)
   (concurrency sequential))
  (generated_types Otls_stubs)
  (generated_entry_point Otls_generated)))
