(library
 (name terrat_base_repo_config_v1)
 (libraries
  containers
  containers-data
  iter
  jsonschema_check
  lua_pattern
  ppx_deriving
  sln
  terrat_data
  terrat_repo_config
  terrat_tag_query
  yojson)
 (preprocess
  (pps
   ppx_blob
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving_yojson)))
