(library
 (name terrat_vcs_service_gitlab)
 (wrapped false)
 (libraries
  brtl_permissions
  gitlab_webhooks
  gitlab_webhooks_decoder
  logs
  minijinja
  pgsql_pagination
  sln
  terrat_code_idx
  terrat_metrics
  terrat_plan_diff
  terrat_session
  terrat_sql_of_tag_query
  terrat_telemetry
  terrat_vcs_access_token
  terrat_vcs_api_gitlab
  terrat_vcs_event_evaluator
  terrat_vcs_event_evaluator2
  terrat_vcs_gitlab_comment
  terrat_vcs_kv_store
  terrat_vcs_provider2
  terrat_vcs_provider2_gitlab
  terrat_vcs_service
  terrat_vcs_stacks)
 (preprocessor_deps
  (glob_files sql/*.sql))
 (preprocess
  (pps ppx_blob ppx_deriving.ord ppx_deriving.show ppx_deriving_yojson)))
